--- a/data_structures/CMakeLists.txt
+++ b/data_structures/CMakeLists.txt
@@ -1,29 +1,20 @@
-# Define a macro to create an executable from a given .cpp filename
-macro(SOURCE_BUILDER filename)
+# List of source files for the data_structures_lib
+SET(DS_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/node.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/stack.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+)
 
-    get_filename_component(_target "${filename}" NAME_WE)
-    set(${_target}_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/${filename}")
+# Define a static library target with the given sources
+add_library(data_structures_lib STATIC ${DS_SOURCES})
 
-    # Define the executable
-    add_executable(${_target} ${${_target}_SRCS})
+# Make headers from src/ accessible to anything linking this library
+# for example they are able to be included in ./test 
+target_include_directories(data_structures_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-    # Set output name of the executable
-    set_target_properties(${_target} PROPERTIES OUTPUT_NAME ${_target})
-
-    # Set compile flags conditionally
-    if(WIN32)
-        set_target_properties(${_target} PROPERTIES COMPILE_FLAGS "${COMPILE_WARNS_FLAGS}")
-    else()
-        set_target_properties(${_target} PROPERTIES COMPILE_FLAGS "-g ${COMPILE_WARNS_FLAGS}")
-    endif()
-
-    install(TARGETS ${_target} DESTINATION "data_structures")
-
-endmacro()
-
-# Get all .cpp files in the current directory (relative paths)
-file(GLOB APP_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
-
-foreach(testsourcefile ${APP_SOURCES})
-    SOURCE_BUILDER(${testsourcefile})
-endforeach()
+# Add the src and test subdirectories to the build
+# This tells CMake to process the CMakeLists.txt files inside `src/` and `test/`
+# Each of those directories must contain their own CMakeLists.txt file
+# It's a way to modularize project: keep src logic and tests separate and clean
+add_subdirectory(src)
+add_subdirectory(test)
