utiles lib, Im plement UT_Time to UTC track timestamp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 add_subdirectory(data_structures)
+add_subdirectory(utiles)
 add_subdirectory(lib/googletest)
