--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(data_structures)
 add_subdirectory(utiles)
 add_subdirectory(lib/googletest)
 add_subdirectory(flatbuffers)
+add_subdirectory(fbcache)
