--- a/data_structures/CMakeLists.txt
+++ b/data_structures/CMakeLists.txt
@@ -1,16 +1,18 @@
 # List of source files for the data_structures_lib
-SET(DS_SOURCES
+set(MODULE data_structures)
+
+SET(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/node.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/stack.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
 
 # Define a static library target with the given sources
-add_library(data_structures_lib STATIC ${DS_SOURCES})
+add_library(${MODULE}_lib STATIC ${SOURCES})
 
 # Make headers from src/ accessible to anything linking this library
 # for example they are able to be included in ./test 
-target_include_directories(data_structures_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(${MODULE}_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 # Add the src and test subdirectories to the build
 # This tells CMake to process the CMakeLists.txt files inside `src/` and `test/`
