--- a/fbcache/src/CMakeLists.txt
+++ b/fbcache/src/CMakeLists.txt
@@ -1,23 +1,25 @@
-# Get the module name from the parent of the current directory (e.g., 'fbcache')
-get_filename_component(MODULE_DIR ${CMAKE_CURRENT_LIST_DIR} DIRECTORY)
-get_filename_component(MODULE ${MODULE_DIR} NAME)
-string(TOLOWER ${MODULE} MODULE_LOWER)
+# Define a macro to create an executable from a given .cpp filename
+# to build a src binary in bin folder
+set(MODULE fbcache)
 
-# Define a macro to build an executable from a single .cpp file
 macro(SOURCE_BUILDER filename)
+
     get_filename_component(_target "${filename}" NAME_WE)
     set(${_target}_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/${filename}")
 
+    # Define the executable
     add_executable(${_target} ${${_target}_SRCS})
 
+    # Set output name of the executable
     set_target_properties(${_target} PROPERTIES OUTPUT_NAME ${_target})
 
+    # Set compile flags conditionally
     if(WIN32)
         set_target_properties(${_target} PROPERTIES COMPILE_FLAGS "${COMPILE_WARNS_FLAGS}")
     else()
         set_target_properties(${_target} PROPERTIES COMPILE_FLAGS "-g ${COMPILE_WARNS_FLAGS}")
     endif()
 
-    # Install the binary to bin/<module>/
-    install(TARGETS ${_target} DESTINATION "bin/${MODULE_LOWER}")
+    install(TARGETS ${_target} DESTINATION ${MODULE})
+
 endmacro()
