new folder for c++ concurrency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(utiles)
 add_subdirectory(lib/googletest)
 add_subdirectory(flatbuffers)
 add_subdirectory(fbcache)
+add_subdirectory(concurrency)
