macro log implementation

--- a/utiles/CMakeLists.txt
+++ b/utiles/CMakeLists.txt
@@ -1,7 +1,8 @@
 # List of source files for the data_structures_lib
 SET(DS_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/UP_Time.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/processMearsure.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/logging.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/processMearsure.hpp
 )
 
 # Define a static library target with the given sources
