--- a/data_structures/CMakeLists.txt
+++ b/data_structures/CMakeLists.txt
@@ -2,11 +2,12 @@
 set(MODULE data_structures)
 
 SET(SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/node.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/log.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/stack.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/stack_using_single_list.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/vector.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/array.hpp
 )
 
 # Define a static library target with the given sources
